k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-web
  labels:
    app: go-app-web
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: go-app-web
  type: NodePort
